# bookstack-cli

./: .gitignore  AGENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
bookstack_cli/: __init__.py  client.py  config.py  exceptions.py  main.py  models.py
bookstack_cli/resources/: __init__.py  attachments.py  books.py  chapters.py  pages.py  revisions.py  roles.py  search.py  shelves.py  tags.py  users.py
docs/: README.md  api-reference.md  authentication.md  integration-guide.md  overview.md  research.md
examples/page-import/: test-with-images.md
skill/: SKILL.md
tests/: conftest.py  test_client.py  test_config.py  test_main.py  test_models.py  test_resources.py
