[project]
name = "bookstack-cli"
version = "0.1.0"
description = "CLI for coding agents to interact with BookStack wiki"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "typer>=0.15",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
bookstack = "bookstack_cli.main:app"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bookstack_cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.19",
]
