[project]
name = "bookstack-cli"
version = "0.1.1"
description = "CLI for coding agents to interact with a BookStack wiki via its REST API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Michael Zehrer"},
]
keywords = ["bookstack", "wiki", "cli", "api", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Utilities",
]

dependencies = [
    "httpx>=0.28",
    "pydantic>=2.0",
    "typer>=0.15",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/mzehrer/bookstack-cli"
Source = "https://github.com/mzehrer/bookstack-cli"
Issues = "https://github.com/mzehrer/bookstack-cli/issues"
Documentation = "https://github.com/mzehrer/bookstack-cli#readme"

[project.scripts]
bookstack = "bookstack_cli.main:app"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bookstack_cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.19",
]
